--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,13 +20,16 @@ CONAN_BASIC_SETUP()
 
 ADD_SUBDIRECTORY(domains/utils)
 ADD_SUBDIRECTORY(domains/messaging)
+ADD_SUBDIRECTORY(domains/aggregate)
 
 IF(BUILD_TESTS)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fprofile-arcs -ftest-coverage")
   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -fprofile-arcs -ftest-coverage")
   ENABLE_TESTING()
   ADD_SUBDIRECTORY(unit_tests/domains/messaging)
+  ADD_SUBDIRECTORY(unit_tests/domains/aggregate)
   #TARGET_INCLUDE_DIRECTORIES(messaging_tests PUBLIC ${CMAKE_SOURCE_DIR})
   #ADD_TEST(cqrs_tests bin/cqrs_tests)
   ADD_TEST(messaging_tests bin/messaging_tests)
+  ADD_TEST(aggregate_tests bin/aggregate_tests)
 ENDIF()
