Add debugging symbols for GDB when building tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ ADD_SUBDIRECTORY(domains/messaging)
 ADD_SUBDIRECTORY(domains/aggregate)
 
 IF(BUILD_TESTS)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fprofile-arcs -ftest-coverage")
-  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -fprofile-arcs -ftest-coverage")
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O0 -fprofile-arcs -ftest-coverage")
+  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ggdb -O0 -fprofile-arcs -ftest-coverage")
   ENABLE_TESTING()
   ADD_SUBDIRECTORY(unit_tests/domains/messaging)
   ADD_SUBDIRECTORY(unit_tests/domains/aggregate)
