First working example of event sourcing with reusable (single-threaded) memory event store

--- a/domains/aggregate/CMakeLists.txt
+++ b/domains/aggregate/CMakeLists.txt
@@ -1,4 +1,4 @@
 ADD_LIBRARY(domains_aggregate INTERFACE)
 TARGET_SOURCES(domains_aggregate INTERFACE
-   event_source.hpp)
-
+   event_source.hpp
+   event_store.hpp)
