Add any class supporting small-value optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    SET(warnings "/W4 /WX /EHsc")
 ENDIF()
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z ${warnings}")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -fconcepts ${warnings}")
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${warnings}")
 
 SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}")
@@ -26,10 +26,10 @@ IF(BUILD_TESTS)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O0 -fprofile-arcs -ftest-coverage")
   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ggdb -O0 -fprofile-arcs -ftest-coverage")
   ENABLE_TESTING()
+  ADD_SUBDIRECTORY(unit_tests/domains/utils)
   ADD_SUBDIRECTORY(unit_tests/domains/messaging)
   ADD_SUBDIRECTORY(unit_tests/domains/aggregate)
-  #TARGET_INCLUDE_DIRECTORIES(messaging_tests PUBLIC ${CMAKE_SOURCE_DIR})
-  #ADD_TEST(cqrs_tests bin/cqrs_tests)
+  ADD_TEST(utils_tests bin/utils_tests)
   ADD_TEST(messaging_tests bin/messaging_tests)
   ADD_TEST(aggregate_tests bin/aggregate_tests)
 ENDIF()
