--- a/unit_tests/domains/utils/CMakeLists.txt
+++ b/unit_tests/domains/utils/CMakeLists.txt
@@ -1,2 +1,9 @@
-ADD_EXECUTABLE(utils_tests)
-TARGET_INCLUDE_DIRECTORIES(utils_tests PRIVATE )
+ADD_EXECUTABLE(utils_tests
+   main.cpp
+   any.cpp)
+TARGET_INCLUDE_DIRECTORIES(utils_tests PRIVATE
+   ${PROJECT_SOURCE_DIR}
+   ${CONAN_INCLUDE_DIRS_CATCH})
+TARGET_LINK_LIBRARIES(utils_tests PRIVATE
+   ${CONAN_LIBS_DIRS_CATCH}
+   ${CONAN_LIBS_CATCH})
