--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ CONAN_BASIC_SETUP()
 ADD_SUBDIRECTORY(domains/utils)
 ADD_SUBDIRECTORY(domains/messaging)
 ADD_SUBDIRECTORY(domains/aggregate)
+ADD_SUBDIRECTORY(domains/event_source)
 
 IF(BUILD_TESTS)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O0 -fprofile-arcs -ftest-coverage")
@@ -29,6 +30,7 @@ IF(BUILD_TESTS)
   ADD_SUBDIRECTORY(unit_tests/domains/utils)
   ADD_SUBDIRECTORY(unit_tests/domains/messaging)
   ADD_SUBDIRECTORY(unit_tests/domains/aggregate)
+  ADD_SUBDIRECTORY(unit_tests/domains/event_source)
   ADD_TEST(utils_tests bin/utils_tests)
   ADD_TEST(messaging_tests bin/messaging_tests)
   ADD_TEST(aggregate_tests bin/aggregate_tests)
