--- a/unit_tests/domains/event_source/CMakeLists.txt
+++ b/unit_tests/domains/event_source/CMakeLists.txt
@@ -1,9 +1,10 @@
-ADD_EXECUTABLE(aggregate_tests
+ADD_EXECUTABLE(event_source_tests
+   event_source.cpp
    main.cpp)
-TARGET_INCLUDE_DIRECTORIES(aggregate_tests PRIVATE
+TARGET_INCLUDE_DIRECTORIES(event_source_tests PRIVATE
    ${PROJECT_SOURCE_DIR}
    ${CONAN_INCLUDE_DIRS_CATCH})
-TARGET_LINK_LIBRARIES(aggregate_tests PRIVATE
+TARGET_LINK_LIBRARIES(event_source_tests PRIVATE
    ${CONAN_LIBS_DIRS_KERCHOW}
    ${CONAN_LIBS_KERCHOW}
    ${CONAN_LIBS_DIRS_CATCH}
