Add unit tests for commit_store

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -3,6 +3,10 @@ cmake_minimum_required(VERSION 2.8.12)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
+include(res/Catch)
 
-add_executable(package_test main.cpp)
-target_link_libraries(domains ${CONAN_LIBS})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -fstrict-aliasing -Werror")
+
+enable_testing()
+add_subdirectory(event_sourcing)
+#add_subdirectory(cqrs)
