Update to use c++20 for some "primitive" structures

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -1,14 +1,17 @@
 add_executable(skizzay_domains_event_sourcing_tests
    main.cpp
-   domains/event_sourcing/hook.t.cpp
-   domains/event_sourcing/commit_store.t.cpp
-   domains/event_sourcing/range_holder.t.cpp
+   domains/event_sourcing/event_header.t.cpp
+   domains/event_sourcing/identifier.t.cpp
+   domains/event_sourcing/sequence.t.cpp
    )
 target_link_libraries(skizzay_domains_event_sourcing_tests skizzay_domains CONAN_PKG::kerchow
    CONAN_PKG::catch2)
 
 catch_discover_tests(skizzay_domains_event_sourcing_tests
    TEST_SPEC "[unit][hook]"
+   )
+catch_discover_tests(skizzay_domains_event_sourcing_tests
+   TEST_SPEC "[unit][sequence]"
    )
 catch_discover_tests(skizzay_domains_event_sourcing_tests
    TEST_SPEC "[unit][commit_store]"
