Test event types

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(skizzay_domains_event_sourcing_tests
    main.cpp
    domains/event_sourcing/event_header.t.cpp
+   domains/event_sourcing/event.t.cpp
    domains/event_sourcing/identifier.t.cpp
    domains/event_sourcing/sequence.t.cpp
    )
