--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,29 +9,19 @@ ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    SET(warnings "/W4 /WX /EHsc")
 ENDIF()
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -fconcepts -fstrict-aliasing ${warnings}")
+SET(CMAKE_CXX_STANDARD 20)
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstrict-aliasing ${warnings}")
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${warnings}")
 
 SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}")
 INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 CONAN_BASIC_SETUP()
 
-#STRING(REPLACE "-std=c++11" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-
-ADD_SUBDIRECTORY(domains/utils)
-ADD_SUBDIRECTORY(domains/messaging)
-ADD_SUBDIRECTORY(domains/aggregate)
-ADD_SUBDIRECTORY(domains/event_source)
+ADD_SUBDIRECTORY(src/main/cpp)
 
 IF(BUILD_TESTS)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O0 -fprofile-arcs -ftest-coverage")
   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ggdb -O0 -fprofile-arcs -ftest-coverage")
   ENABLE_TESTING()
-  ADD_SUBDIRECTORY(unit_tests/domains/utils)
-  ADD_SUBDIRECTORY(unit_tests/domains/messaging)
-  ADD_SUBDIRECTORY(unit_tests/domains/aggregate)
-  ADD_SUBDIRECTORY(unit_tests/domains/event_source)
-  ADD_TEST(utils_tests bin/utils_tests)
-  ADD_TEST(messaging_tests bin/messaging_tests)
-  ADD_TEST(aggregate_tests bin/aggregate_tests)
+  ADD_SUBDIRECTORY(src/test/cpp)
 ENDIF()
