Add event and event_handler concepts.  Add CPOs for event_stream_id, event_stream_sequence, event_stream_timestamp.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,9 @@
         "string": "cpp",
         "string_view": "cpp",
         "ranges": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "set": "cpp",
+        "regex": "cpp"
     },
     "cmake.configureSettings": {
         "BUILD_TESTS": "ON"
