--- a/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
+++ b/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_LIBRARY(domains_event_source INTERFACE)
 TARGET_SOURCES(domains_event_source INTERFACE
       concepts.h
+      event.h
       sequenced.h
    )
