Add basic_commit (needs to be tested and add validation against empty range and concepts)

--- a/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
+++ b/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_LIBRARY(domains_event_source INTERFACE)
 TARGET_SOURCES(domains_event_source INTERFACE
+      commit.h
       concepts.h
       event.h
       sequenced.h
