Support an event stream

--- a/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
+++ b/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
@@ -3,5 +3,7 @@ TARGET_SOURCES(domains_event_source INTERFACE
       commit.h
       concepts.h
       event.h
+      event_stream.h
       sequenced.h
+      inmemory/event_stream.h
    )
