Add generator and in-memory event store.  Needs unit testing

--- a/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
+++ b/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
@@ -2,8 +2,10 @@ ADD_LIBRARY(domains_event_source INTERFACE)
 TARGET_SOURCES(domains_event_source INTERFACE
       commit.h
       concepts.h
+      concurrency_collision.h
       event.h
       event_stream.h
+      generator.h
       sequenced.h
-      inmemory/event_stream.h
+      inmemory/event_store.h
    )
