--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,9 +57,12 @@
         "ranges": "cpp",
         "map": "cpp",
         "set": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "coroutine": "cpp",
+        "stop_token": "cpp"
     },
     "cmake.configureSettings": {
-        "BUILD_TESTS": "ON"
+        "BUILD_TESTS": "ON",
+        "CMAKE_TOOLCHAIN_FILE": "${HOME}/Documents/vcpkg/scripts/buildsystems/vcpkg.cmake"
     }
 }
