Complete event_source and move onto aggregate

--- a/src/main/cpp/skizzay/domains/aggregate/CMakeLists.txt
+++ b/src/main/cpp/skizzay/domains/aggregate/CMakeLists.txt
@@ -1,4 +1,3 @@
 ADD_LIBRARY(domains_aggregate INTERFACE)
 TARGET_SOURCES(domains_aggregate INTERFACE
-   event_source.hpp
-   event_store.hpp)
+   entity.h)
