Event with timestamp

--- a/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
+++ b/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
@@ -3,9 +3,10 @@ TARGET_SOURCES(domains_event_source INTERFACE
       commit.h
       concepts.h
       concurrency_collision.h
-      event.h
+      event_store.h
       event_stream.h
+      event.h
       generator.h
-      sequenced.h
+      sequence.h
       inmemory/event_store.h
    )
