Clean up old code

--- a/src/test/cpp/CMakeLists.txt
+++ b/src/test/cpp/CMakeLists.txt
@@ -1,2 +1,5 @@
 ADD_SUBDIRECTORY(skizzay/domains/event_source)
 ADD_TEST(event_source_tests bin/event_source_tests)
+
+ADD_SUBDIRECTORY(skizzay/domains/aggregate)
+ADD_TEST(event_source_tests bin/aggregate_tests)
