Refactor common code out of event_source

--- a/src/test/cpp/CMakeLists.txt
+++ b/src/test/cpp/CMakeLists.txt
@@ -1,5 +1,1 @@
-ADD_SUBDIRECTORY(skizzay/domains/event_source)
-ADD_TEST(event_source_tests bin/event_source_tests)
-
-ADD_SUBDIRECTORY(skizzay/domains/aggregate)
-ADD_TEST(event_source_tests bin/aggregate_tests)
+ADD_SUBDIRECTORY(skizzay/domains)
