--- a/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
+++ b/src/main/cpp/skizzay/domains/event_source/CMakeLists.txt
@@ -6,5 +6,6 @@ TARGET_SOURCES(domains_event_source INTERFACE
       event_stream.h
       event.h
       generator.h
+      null_mutex.h
       inmemory/event_store.h
    )
