Refactored event_store to be an event_stream_factory for consistent naming conventions. Added some sample implementations of entity factories

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,5 +67,6 @@
     "cmake.configureSettings": {
         "BUILD_TESTS": "ON",
         "CMAKE_TOOLCHAIN_FILE": "${HOME}/Documents/vcpkg/scripts/buildsystems/vcpkg.cmake"
-    }
+    },
+    "C_Cpp.intelliSenseEngineFallback": "Enabled"
 }
