--- a/src/test/cpp/skizzay/domains/CMakeLists.txt
+++ b/src/test/cpp/skizzay/domains/CMakeLists.txt
@@ -4,18 +4,19 @@ ADD_EXECUTABLE(domains_tests
    sequence.cpp
    aggregate/aggregate_root.cpp
    aggregate/entity.cpp
+   aggregate/entity_store.cpp
    event_source/commit.cpp
    event_source/event.cpp
    event_source/event_stream.cpp
-   event_source/inmemory/event_store.cpp
+   event_source/inmemory/event_stream_factory.cpp
 )
 TARGET_INCLUDE_DIRECTORIES(domains_tests PRIVATE
-   ${PROJECT_SOURCE_DIR}/src/main/cpp
    ${CONAN_INCLUDE_DIRS_CATCH}
 )
 TARGET_COMPILE_OPTIONS(domains_tests PRIVATE -fcoroutines -fconcepts-diagnostics-depth=5)
 TARGET_LINK_OPTIONS(domains_tests PRIVATE -fcoroutines)
 TARGET_LINK_LIBRARIES(domains_tests PRIVATE
+   skizzay_domains
    ${CONAN_LIBS_DIRS_KERCHOW}
    ${CONAN_LIBS_KERCHOW}
    ${CONAN_LIBS_DIRS_CATCH}
